# News-Summary

./: README.md
backend/: Dockerfile  app.py  news_summarizer.py  pyproject.toml
frontend/: Dockerfile  app.py  pyproject.toml
