[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Akash",email = "akashkallai27@gmail.com"}
]
readme = "README.md"
requires-python =">=3.12,<3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "newsapi-python (>=0.2.7,<0.3.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "gtts (>=2.5.4,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "flask[async] (>=3.0,<4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
